DP-7766: Adds an overflow rule to fix jumpy IE wrapping

--- a/styleguide/source/assets/scss/06-theme/03-organisms/_sticky-toc.scss
+++ b/styleguide/source/assets/scss/06-theme/03-organisms/_sticky-toc.scss
@@ -363,3 +363,7 @@ body.stuck {
     display: none;
   }
 }
+
+html.stickyTOC {
+ overflow-y: scroll;
+}
